@@ -13,8 +13,9 @@ eggs = wheel
 [sphinx]
 recipe = zc.recipe.egg:script
 eggs = sphinx
+extra-paths = ${buildout:directory}/src
 relative-paths=true
 scripts = sphinx-build=sphinx
 initialization =
-    sys.argv.extend(['-N', '-q', '-b', 'html',
+    sys.argv.extend(['-n', '-W', '-b', 'html',
                      '-E', 'docs', '${buildout:directory}/out/html'])
