@@ -1,20 +1,28 @@
 [versions]
-Sphinx = 1.4.5
-Babel = 2.2.0
-Jinja2 = 2.8
-Pygments = 2.1.3
-alabaster = 0.7.7
-docutils = 0.12
-pytz = 2016.1
-six = 1.10.0
+Sphinx = 1.6.5
+Babel = 2.5.3
+Jinja2 = 2.10
+MarkupSafe = 1.0
+Pygments = 2.2.0
+alabaster = 0.7.10
+certifi = 2018.1.18
+chardet = 3.0.4
+docutils = 0.14
+idna = 2.6
+pytz = 2018.3
+requests = 2.18.4
+setuptools = 39.0.1
+six = 1.11.0
 snowballstemmer = 1.2.1
-zc.recipe.egg = 2.0.3
-wheel = 0.29.0
+urllib3 = 1.22
+wheel = 0.30.0
+zc.buildout = 2.11.2
+zc.recipe.egg = 2.0.5
 
 # Required by:
-# Jinja2==2.8
-MarkupSafe = 0.23
+# Sphinx==1.6.5
+imagesize = 1.0.0
 
 # Required by:
-# Sphinx==1.4.5
-imagesize = 0.7.0
+# Sphinx==1.6.5
+sphinxcontrib-websupport = 1.0.1
