@@ -4,3 +4,6 @@ CHANGES
 
 Unreleased
 ==========
+
+- BREAKING: Renamed directive from ``csv-table`` to ``csv-filter`` in
+  order not to override exisint ``csv-table`` directive.
